se trabajo en el responsive

--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,6 @@
   background: linear-gradient(135deg, #1e1e1e, #ff004d);
   box-sizing: border-box;
   cursor: url('https://twemoji.maxcdn.com/v/latest/72x72/1f60d.png') 16 16, auto;
+  position: relative;
+  overflow: hidden;
 }
