se borra los background sin relevancia

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   text-align: center;
-  background: linear-gradient(135deg, #1e1e1e, #ff004d);
+  background: transparent;
   box-sizing: border-box;
   cursor: url('https://twemoji.maxcdn.com/v/latest/72x72/1f60d.png') 16 16, auto;
   position: relative;
