--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -68,7 +68,28 @@
     margin: 0;
     font-size: 14px;
   }
-  
+  .footer-bottom > img{
+    width: 250px;
+    height: 250px;
+  }
+  .footer-imagen{
+    padding: 0;
+    background-color: white;
+    color: black;
+    position: relative;
+
+  }
+  .footer-imagen > span{
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: 0px;
+    right: 0px;
+    z-index: 8;
+    font-size: 2rem;
+    font-weight: 700;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
   em{
     color: aqua;
   }
